# minVC

./: .gitmodules  CMakeLists.txt  approx.cpp  clique.cpp  exp.cpp  log_comb.cpp  main.cpp  minvc_core.cpp  minvc_core.h  vc_ui.cpp  vc_ui.h  vc_ui.ui
